upgrade java 8 to java 11